<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2009 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
     
     
     NOTICE
     THIS FILE WAS MODIFIED
-->

<resources>

    <string name="app_name">Ichiban</string>

    <!-- BluetoothChat -->
    <string name="send">Send</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="title_connecting">connecting...</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_not_connected">not connected</string>

    <!-- DeviceListActivity -->
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Options Menu -->
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="loadCSV">Load from local file(300ms)</string>
    <string name="loadDenseCSV">Load from local file(35ms)</string>
    <string name="acceleration">Acceleration</string>
    <string name="time">Time</string>
    <string name="speed">Speed</string>
    <string name="distance">Distance</string>
    <string name="now">Now</string>
    <string name="avarage">Avarage</string>
    <string name="maximum">Maximum</string>
    <string name="minimum">Minimum</string>
    <string name="preferences">Preferences</string>

    <string-array name="resetArray">
        <item>Reset data</item>
        <item>Pause data</item>
    </string-array>
    <string-array name="resetArrayData">
        <item>restart</item>
        <item>notRestart</item>
    </string-array>
    <string-array name="graphTypeData">
        <item>PATH</item>
        <item>SPEED</item>
        <item>ACCELERATION</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>
    <string-array name="graphType">
        <item>Path</item>
        <item>Speed</item>
        <item>Acceleration</item>
        <item>G Force x</item>
        <item>G Force y</item>
        <item>G Force z</item>
    </string-array>

</resources>